# wake-control-gym

./: README.md  pyproject.toml  requirements.txt
wake_control_gym/: __init__.py  core.py  emgauss.yaml  floris-jensen.yaml  main.py  wake_control_env.py
wake_control_gym/action_representations/: __init__.py  discrete_delta_yaw_action.py  discrete_step_actions.py  wind_based_actions.py  yaw_misalignment_action.py
wake_control_gym/adapters/floris/: __init__.py  floris_adapter.py  visualisation.py
wake_control_gym/observations/: __init__.py  average_turbulence_intensity.py  farm_wind_directions.py  farm_wind_speeds.py  farm_yaw_angles.py  mast_wind_directions.py  mast_wind_speed.py  mast_wind_speeds.py  turbine_wind_direction.py  turbine_wind_speed.py  turbine_yaw_angle.py  turbulence_intensity.py
wake_control_gym/reward_functions/: __init__.py  farm_power_reward.py  turbine_power_reward.py
wake_control_gym/torch_wind_sim/: __init__.py  torch_wind_sim.py
wake_control_gym/wrappers/: noise_observation.py
