# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wake-control-gym"
description = "A dynamically configurable wake control gymnasium environment."
readme = "README.md"
requires-python = ">= 3.10"
authors = [{ name = "Onno Verberne" }]
license = { file = "LICENSE" }
keywords = ["Reinforcement Learning", "Active Wake Control", "Yaw Control", "Pitch Control", "Wind Farm"]
dependencies = [
    "numpy ==1.26.4",
    "gymnasium ==0.29.1",
    "torch ==2.3.1",
    "opencv-python ==4.10.0.84",
]
dynamic = ["version"]

[project.optional-dependencies]
# Update dependencies in `all` if any are added or removed
floris = ["FLORIS == 4.1"]
all = [
    # All dependencies above except accept-rom-license
    # NOTE: No need to manually remove the duplicates, setuptools automatically does that.
    # floris
    "FLORIS == 4.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["wake_control_gym", "wake_control_gym.*"]